--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d",
-    "data:users": "node backend/seeder -u"
+    "data:import": "node backend/seeders/mainSeeder",
+    "data:destroy": "node backend/seeders/mainSeeder -d",
+    "data:users": "node backend/seeders/mainSeeder -u"
   },
   "author": "Juan Suazo",
   "license": "MIT",
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "faker": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
